# struct_generator

./: .gitignore  Cargo.toml  LICENSE  element_definitions.rs  schema.xsd  sorted_files.txt  structs.rs
MetsatietostandardiskeematV33.03/: readme.txt
MetsatietostandardiskeematV33.03/V33/: Acknowledge.xsd  AllSchemasForValidation.xsd  BusinessAcceptance.xsd  BusinessAcceptances.xsd  CallForOfferWithPublicity.xsd  CallForOffers.xsd  Common.xsd  CommonDistributionData.xsd  CommonObjectData.xsd  Common_GeometricDataType.xsd  Contract.xsd  (+111 more)
src/: __structs_and_definitions.rs  create_structs.rs  custom_deserializers.rs  element_utils.rs  file_utils.rs  lib.rs  main.rs  sorting_algorithm.rs  string_utils.rs
structs/: Acknowledge.rs  Acknowledge_ed.rs  AllSchemasForValidation_ed.rs  BusinessAcceptance.rs  BusinessAcceptance_ed.rs  BusinessAcceptances.rs  BusinessAcceptances_ed.rs  CallForOfferWithPublicity.rs  CallForOfferWithPublicity_ed.rs  CallForOffers.rs  CallForOffers_ed.rs  Common.rs  CommonDistributionData.rs  CommonDistributionData_ed.rs  CommonObjectData.rs  CommonObjectData_ed.rs  Common_GeometricDataType.rs  Common_GeometricDataType_ed.rs  Common_ed.rs  CompanyInformation.rs  CompanyInformation_ed.rs  ContactInformation.rs  ContactInformation_ed.rs  ContactRequest.rs  ContactRequest_ed.rs  ContactRequests.rs  ContactRequests_ed.rs  Contract.rs  Contract_ed.rs  DeadTreeStratum.rs  DeadTreeStratum_ed.rs  Envelope.rs  EnvelopeBase.rs  EnvelopeBase_ed.rs  Envelope_ed.rs  Envelopes.rs  Envelopes_ed.rs  ExternalFile.rs  ExternalFile_ed.rs  FinancingActApplication.rs  (+400 more)
(+38 files in other folders)
