[package]
name = "struct_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
serde-xml-rs = "0.6.0"
quick-xml = { version = "0.37.0", features = ["serialize"] }
phf = { version = "0.11.2", features = ["macros"] }